--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <title>MeetEase</title>
   </head>
   <body>
+    <script src="https://www.paypal.com/sdk/js?client-id=AY3P3xaN96BA8cY1-ePEFp3U17HOZY1CwKqM72qd_M62nIs2Lx5Qjp8Vg2TlLrSIMdjyeWJUJUlxX-IC&currency=USD"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
